// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render simple bars 1`] = `
<g>
  <rect
    fill="currentColor"
    height="25"
    stroke="none"
    width="25"
    x="0"
    y="75"
  />
  <rect
    fill="currentColor"
    height="50"
    stroke="none"
    width="25"
    x="25"
    y="50"
  />
  <rect
    fill="currentColor"
    height="75"
    stroke="none"
    width="25"
    x="50"
    y="25"
  />
  <rect
    fill="currentColor"
    height="100"
    stroke="none"
    width="25"
    x="75"
    y="0"
  />
</g>
`;

exports[`should use style and class 1`] = `
<g>
  <rect
    fill="currentColor"
    height="25"
    stroke="none"
    style="stroke: white;"
    width="25"
    x="0"
    y="75"
  />
  <rect
    fill="currentColor"
    height="50"
    stroke="none"
    style="stroke: red;"
    width="25"
    x="25"
    y="50"
  />
  <rect
    class="is-highlighted"
    fill="currentColor"
    height="75"
    stroke="none"
    style="stroke: white;"
    width="25"
    x="50"
    y="25"
  />
  <rect
    fill="currentColor"
    height="100"
    stroke="none"
    style="stroke: white;"
    width="25"
    x="75"
    y="0"
  />
</g>
`;
